feat: Adicionado migrations

--- a/scr/MBA.EducaOn.Api/appsettings.Development.json
+++ b/scr/MBA.EducaOn.Api/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnectionLite": "Data Source=Datafile\\Database-EducaOn.db"
+  },
+  "JwtSettings": {
+    "Segredo": "A4CF385F-F9A7-4D30-9076-9E9A26362248",
+    "ExpiracaoHoras": 1,
+    "Emissor": "MBA.EducaOn",
+    "Audiencia": "https://localhost"
   }
 }
