--- a/scr/MBA.EducaOn.GestaoAlunos.Data/MBA.EducaOn.GestaoAlunos.Data.csproj
+++ b/scr/MBA.EducaOn.GestaoAlunos.Data/MBA.EducaOn.GestaoAlunos.Data.csproj
@@ -1,14 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MBA.EducaOn.Domain\MBA.EducaOn.Core.csproj" />
-    <ProjectReference Include="..\MBA.EducaOn.GestaoAlunos.Domain\MBA.EducaOn.GestaoAlunos.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\MBA.EducaOn.Domain\MBA.EducaOn.Core.csproj" />
+		<ProjectReference Include="..\MBA.EducaOn.GestaoAlunos.Domain\MBA.EducaOn.GestaoAlunos.Domain.csproj" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<Folder Include="Migrations\" />
+		<Folder Include="Repository\" />
+	</ItemGroup>
 
 </Project>
