--- a/scr/MBA.EducaOn.Cadastro.Data/MBA.EducaOn.GestaoConteudo.Data.csproj
+++ b/scr/MBA.EducaOn.Cadastro.Data/MBA.EducaOn.GestaoConteudo.Data.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mapping\" />
+    <Compile Remove="Mapping\**" />
+    <EmbeddedResource Remove="Mapping\**" />
+    <None Remove="Mapping\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Repository\" />
   </ItemGroup>
 
