--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,11 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+#files SQL Lite
+*.db
+*.db-shm
+*.db-wal
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
