--- a/scr/MBA.EducaOn.Api/appsettings.Development.json
+++ b/scr/MBA.EducaOn.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionLite": "Data Source=Datafile\\Database-EducaOn.db"
+    "DefaultConnectionLite": "Data Source=Database-EducaOn.db"
   },
   "JwtSettings": {
     "Segredo": "A4CF385F-F9A7-4D30-9076-9E9A26362248",
